--- a/style.css
+++ b/style.css
@@ -23,22 +23,16 @@ a:hover,a:visited,a:active,a:link{
   text-decoration:none;
   color:#a9a9a9;
 }
-.btn{
-  margin:5px;
-  text-shadow:none;
-}
-.btn:hover,.btn:visited,.btn:active{
-  background-color:#caebf2 ;
-  background-image:none;
-  color:#a9a9a9;
-}
+
+
 
 #timer{
   text-align:center;
   padding:10px;
   font-size:50px;
-  background-color:#caebf2;
+  background-color:#a9a9a9;
   border-radius:5px;
+  color:#efefef;
 }
 #timerSection{
   text-align:center;
@@ -57,6 +51,25 @@ a:hover,a:visited,a:active,a:link{
 .btn:focus,.btn:active {
    outline: none !important;
 }
+.btn {
+      -webkit-transition: .7s all;
+            transition: .7s all;
+  background:#caebf2;
+  margin:5px;
+  text-shadow:none;
+  border-radius:5px;
+}
+
+.btn:hover {
+    border-radius: 100px;
+}
+.btn:hover,.btn:visited,.btn:active{
+  background-color:#caebf2 ;
+  background-image:none;
+  color:#ff3b3f;
+  border:1px solid #ff3b3f;
+}
+
 label{
   font-size:20px;
   padding:20px 0;
@@ -67,7 +80,21 @@ h3{
 input[type="radio"]{
     width: 20px;
     height: 20px;
+    opacity: 0;
+    position:absolute;
 }
+
+input[type='radio'],label {
+      display: inline-block;
+    vertical-align: middle;
+    margin: 5px;
+    cursor: pointer;
+  }
+
+label {
+  position:relative;
+}
+
 .radio{
   text-align:left;
   padding:0 30px;
